--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <meta name="author" content="TemplateMo">
 
         <title>Sarath Krishnan PV</title>
+            <link rel="icon" type="image/x-icon" href="https://imgs.search.brave.com/azcEUtRmiqYGUr_d19AmMZPfes9y4NhADw0Ydf0Cksk/rs:fit:500:0:0/g:ce/aHR0cHM6Ly90NC5m/dGNkbi5uZXQvanBn/LzAzLzI5LzYyLzQx/LzM2MF9GXzMyOTYy/NDE0OF92MkFXdEZy/M0RnOU5FZTJ0RThF/dW00dXdFZ0xhSXVV/NC5qcGc">
+
+        
 
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
